--- a/daemonset.yaml
+++ b/daemonset.yaml
@@ -20,7 +20,7 @@ spec:
       hostNetwork: true
       containers:
       - name: openvpn
-        image: vpn:v1 
+        image: unicanova/openvpn-client:v0.0.1 
         imagePullPolicy: IfNotPresent
         securityContext:
           capabilities:
